--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h1>Hello, <span></span></h1>
                 <h1>My Name is <span></span></h1>
                 <h1>Muhammad Faizan <span></span></h1>
-                <a href="#projects" type="button" class="cta" target="_blank">Portfolio</a>
+                <a href="https://faizan-nexus.github.io/Creative-Canvas-tech-portfolio/" target="_blank" type="button" class="cta" target="_blank">Portfolio</a>
             </div>
         </div>
     </section>
